[gd_scene load_steps=3 format=3 uid="uid://dw2irt8ra85pb"]

[ext_resource type="Script" path="res://scenes/ui/battle_menu.gd" id="1_vgg7k"]
[ext_resource type="Theme" uid="uid://kwjdqgscw3n" path="res://scenes/main_menu_theme.tres" id="2_5i08g"]

[node name="BattleMenu" type="CanvasLayer"]
scale = Vector2(2, 2)
transform = Transform2D(2, 0, 0, 2, 0, 0)
script = ExtResource("1_vgg7k")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 320.0
offset_bottom = 180.0
color = Color(0, 0, 0, 0.568627)

[node name="Container" type="HBoxContainer" parent="."]
offset_top = 30.0
offset_right = 320.0
offset_bottom = 120.0
alignment = 1

[node name="Panel" type="Panel" parent="Container"]
custom_minimum_size = Vector2(100, 80)
layout_mode = 2
theme = ExtResource("2_5i08g")

[node name="VBoxContainer" type="VBoxContainer" parent="Container/Panel"]
layout_mode = 0
offset_left = 9.0
offset_top = 10.0
offset_right = 90.0
offset_bottom = 66.0
theme_override_constants/separation = 8
alignment = 1

[node name="MainMenuButton" type="Button" parent="Container/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_5i08g")
text = "Main Menu"

[node name="RestartBattleButton" type="Button" parent="Container/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_5i08g")
text = "Restart
"

[node name="CancelButton" type="Button" parent="Container/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_5i08g")
theme_override_constants/h_separation = 0
text = "Cancel
"
